--- a/HTML5-CSS3/Modulo02/Anotacoes/Cores/Cores.css
+++ b/HTML5-CSS3/Modulo02/Anotacoes/Cores/Cores.css
@@ -15,6 +15,22 @@ h1 {
     margin-bottom: 0;
 }
 
+.circle {
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    margin-top: 10px;
+    background-image: conic-gradient(
+        rgb(0, 0, 255), 
+        rgb(253, 1, 254), 
+        rgb(255, 0, 0),
+        rgb(255, 81, 0),
+        rgb(255, 255, 0),
+        rgb(3, 255, 7),
+        hsl(171, 99%, 51%),
+        rgb(0, 0, 255)
+    );
+}
 
 .primarias {
     display: flex;
