--- a/HTML5-CSS3/Modulo02/Aulas/aula005/style.css
+++ b/HTML5-CSS3/Modulo02/Aulas/aula005/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Work Sans', Arial, Helvetica, sans-serif;
     /*
     Medidadas Absolutas
     cm, mm, in, px, pt, pc
@@ -9,8 +12,15 @@ body {
     16px = 1em
     */
     font-size: 1em;
+    font-weight: normal;
+    /*lighter, normal, bold, bolder, 100 - 900 */
+    font-style: normal;
+    text-decoration: none;
 }
 
-h1, h2 {
-    font-family: 'Times New Roman', Times, serif;
+h1 {
+    /* Shorthand font
+    font-style, font-weight, font-size, font-family */
+    
+    font: italic bolder 3em 'Work Sans', sans-serif;
 }
