--- a/HTML5-CSS3/Modulo02/Anotacoes/Cores/Cores.css
+++ b/HTML5-CSS3/Modulo02/Anotacoes/Cores/Cores.css
@@ -27,7 +27,7 @@ h1 {
         rgb(255, 81, 0),
         rgb(255, 255, 0),
         rgb(3, 255, 7),
-        hsl(171, 99%, 51%),
+        rgb(6, 254, 217),
         rgb(0, 0, 255)
     );
 }
