--- a/HTML5-CSS3/Modulo02/Desafios/desafio10/styles/style.css
+++ b/HTML5-CSS3/Modulo02/Desafios/desafio10/styles/style.css
@@ -29,33 +29,69 @@
 body {
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
-    width: 800px;
+}
+
+a.externo::after {
+    content: '\1F517';
 }
 
 header {
-    background-color: var(--cor4);
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    min-height: 150px;
+    padding-top: 30px;
+    text-align: center;
+
 }
 
 header h1 {
-    color: #fff;
+    color: #fff;    
+    margin-bottom: 20px;
     font-family: var(--fonte-destaque);
+    font-size: 3em;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.637);
+
 }
 
 header p {
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
     color: #fff;
+    max-width: 500px; 
+    padding: 0px 10px 0px 10px;
+    margin: auto;
 }
 
 nav {
     background-color: var(--cor5);
+    padding: 10px;
+    box-shadow: 0px 9px 9px rgba(0, 0, 0, 0.411);
 }
 
 nav a {
-    text-decoration: none;
     color: #fff;
+    padding: 10px;
+    border-radius: 30px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: .5s;
 }
+
+nav a:hover {
+    color: var(--cor5);
+    background-color: var(--cor3);
+}
+
 
 main {
     background-color: #fff;
+    min-width: 280px;
+    max-width: 800px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
+    border-radius: 0px 0px 10px 10px;
+
 }
 
 main h1 {
@@ -65,10 +101,87 @@ main h1 {
 
 main h2 {
     font-family: var(--fonte-android);
+    color: var(--cor4);
+    font-size: 1.3em;
+    background-image: linear-gradient(90deg, var(--cor1), rgb(227, 255, 225), transparent);
+    padding: 3px 3px 3px 10px;
+}
+
+main p {
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 20px;
+    line-height: 1.8em;
+    font-size: 1.1em;
+}
+
+main strong {
+    color: var(--cor4);
+}
+
+main a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor5);
+    background-color: var(--cor1);
+    padding: 2px 5px;
+    border-radius: 5px;
+    transition-duration: .4s;
+}
+
+main a:hover {
+    color: var(--cor1);
+    background-color: var(--cor5);
+    text-decoration: underline;
+}
+
+main img {
+    width: 100%;
+}
+
+main img.pequena {
+    max-width: 350px;
+    margin: auto;
+    display: block;
+}
+
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+aside ul {
+    list-style-type: '\2714';
+    list-style-position: inside;
+    columns: 2;
+}
+
+aside h3{
+    background-color: var(--cor4);
+    color: white;
+    padding: 8px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 footer {
-    background-color: var(--cor5);
+    background-image: linear-gradient(to bottom, var(--cor5), var(--cor4));
     color: #fff;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
 
+footer a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    transition-duration: .3s; 
+}
+
+footer a:hover {
+    color: var(--cor2);
+    text-decoration: underline;
 }
