--- a/HTML5-CSS3/Modulo02/Desafios/desafio10/styles/style.css
+++ b/HTML5-CSS3/Modulo02/Desafios/desafio10/styles/style.css
@@ -35,6 +35,23 @@ a.externo::after {
     content: '\1F517';
 }
 
+@media (max-width: 400px) {
+    header nav a{
+        display: block;
+        color: var(--cor1);
+        background-color: var(--cor4);
+        margin: 5px;
+        width: 180px;
+        box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.685);
+    }
+
+    header nav a:hover{
+        color: var(--cor5);
+        background-color: var(--cor3);
+    }
+}
+
+
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     min-height: 150px;
@@ -48,6 +65,7 @@ header h1 {
     margin-bottom: 20px;
     font-family: var(--fonte-destaque);
     font-size: 3em;
+    font-weight: normal;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.637);
 
 }
@@ -59,18 +77,20 @@ header p {
     max-width: 500px; 
     padding: 0px 10px 0px 10px;
     margin: auto;
+    margin-bottom: 10px;
 }
 
+
 nav {
-    background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 9px 9px rgba(0, 0, 0, 0.411);
+    text-align: left;
 }
 
 nav a {
-    color: #fff;
-    padding: 10px;
-    border-radius: 30px;
+    color: var(--cor1);
+    padding: 7px;
+    border-radius: 10px;
     text-decoration: none;
     font-weight: bold;
     transition-duration: .5s;
@@ -84,7 +104,7 @@ nav a:hover {
 
 main {
     background-color: #fff;
-    min-width: 280px;
+    min-width: 250px;
     max-width: 800px;
     margin: auto;
     margin-bottom: 30px;
@@ -103,7 +123,10 @@ main h2 {
     font-family: var(--fonte-android);
     color: var(--cor4);
     font-size: 1.3em;
-    background-image: linear-gradient(90deg, var(--cor1), rgb(227, 255, 225), transparent);
+    background-image: linear-gradient(90deg, 
+    var(--cor1), 
+    rgb(227, 255, 225), 
+    transparent);
     padding: 3px 3px 3px 10px;
 }
 
@@ -145,6 +168,24 @@ main img.pequena {
     display: block;
 }
 
+div.video {
+    background-image: linear-gradient(to bottom, var(--cor0), var(--cor3), var(--cor0));
+    padding: 20px;
+    padding-bottom: 56.5%;
+    margin: 0px -20px 20px -20px;
+    position: relative;
+}
+
+div.video iframe {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.473);
+}
+
 aside {
     background-color: var(--cor1);
     padding: 10px;
@@ -155,7 +196,12 @@ aside {
 aside ul {
     list-style-type: '\2714';
     list-style-position: inside;
-    columns: 2;
+}
+
+@media (min-width: 480px){
+    aside ul {
+        columns: 2;
+    }
 }
 
 aside h3{
@@ -164,6 +210,10 @@ aside h3{
     padding: 8px;
     margin: -10px -10px 0px -10px;
     border-radius: 10px 10px 0px 0px;
+}
+
+aside span a{
+    background-color: var(--cor2);
 }
 
 footer {
