--- a/HTML5-CSS3/Modulo02/Anotacoes/Cores/Cores.css
+++ b/HTML5-CSS3/Modulo02/Anotacoes/Cores/Cores.css
@@ -4,9 +4,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
+    font-size: 5em;
     text-align: center;
     margin: 0;
 }
