--- a/HTML5-CSS3/Modulo03/projeto-cordel/style/style.css
+++ b/HTML5-CSS3/Modulo03/projeto-cordel/style/style.css
@@ -1,3 +1,15 @@
+@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --defaultFont: Verdana, Geneva, Tahoma, sans-serif;
+    --titleFont: 'Passion One', cursive;
+    --contentFont: 'Sriracha', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -6,21 +18,25 @@
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--defaultFont);
 }
 
 header{
     background-color: black;
     color: white;
     text-align: center;
+    font-family: var(--titleFont);
 }
 
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 9vw;
 }
 
 header > p {
     padding-bottom: 50px;
+    font-size: 2.5vw;
 }
 
 a {
@@ -36,6 +52,8 @@ a:hover {
 section {
     padding: 10vh 0 10vh 30px;
     line-height: 2em;
+    font-family: var(--contentFont);
+    font-size: 2.8vw;
 }
 
 .normal{
@@ -49,7 +67,8 @@ section {
 }
 
 .image > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgb(34, 32, 32);
 }
 
