--- a/HTML5-CSS3/Modulo03/projeto-cordel/style/style.css
+++ b/HTML5-CSS3/Modulo03/projeto-cordel/style/style.css
@@ -53,7 +53,11 @@ section {
     padding: 10vh 0 10vh 30px;
     line-height: 2em;
     font-family: var(--contentFont);
-    font-size: 2.8vw;
+    font-size: 3vw;
+}
+
+section > p {
+    padding-bottom: 1em;
 }
 
 .normal{
@@ -64,18 +68,36 @@ section {
 .image{
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px rgb(36, 36, 36);
+    background-size: cover;
+    background-position: bottom center;
+    background-attachment: fixed;
 }
 
 .image > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgb(34, 32, 32);
+    background-color: rgb(0, 0, 0, 0.235);
+    text-shadow: 2px 1px black;
+}
+
+#img1 {
+    background-image: url(../assets/images/background001.jpg);
+}
+
+#img2 {
+    background-image: url(../assets/images/background002.jpg);
+}
+
+#img2 > p {
+    background-color: rgba(0, 0, 0, 0.418);
 }
 
 footer {
     background-color: black;
     color: white;
     text-align: center;
+    font-size: 2vw;
     padding: 10px;
 }
 
