--- a/HTML5-CSS3/Modulo04/exercises/media-queries/mq002/styles/style.css
+++ b/HTML5-CSS3/Modulo04/exercises/media-queries/mq002/styles/style.css
@@ -1,3 +1,40 @@
 @charset "UTF-8";
 
-/* Style to all */
+/* Style to all*/
+
+* {
+    margin: 0px;
+    padding: 0px;
+    background-size: cover;
+    background-position: left bottom;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #1526a7;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+h1 {
+    color: white;
+    text-shadow: 2px 2px 0px #1526a7;
+    padding: 10px;
+}
+
+
+/* Style to landscape orientation*/
+@media (orientation:landscape) {
+    body {
+        background-image: url(../images/cev-landscape.jpg);
+    }
+}
+
+/* Style to portrait orientation*/
+@media (orientation:portrait) {
+    body {
+        background-image: url(../images/cev-portrait.jpg);
+        
+    }
+}
