--- a/HTML5-CSS3/Modulo04/projects/responsive-site/styles/style.css
+++ b/HTML5-CSS3/Modulo04/projects/responsive-site/styles/style.css
@@ -35,7 +35,7 @@ h1 {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.808);
 }
 
-#phone { display: inline_block;}
+#phone { display: inline-block;}
 #tablet { display: none;}
 #print { display: none;}
 #pc { display: none;}
