Adding burger menu

--- a/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/sytles/style.css
+++ b/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/sytles/style.css
@@ -13,6 +13,8 @@ html, body {
 header {
     background-image: linear-gradient(to right, rgb(3, 133, 255), blue);
     color: white;
+    box-shadow: 1px 1px 5px rgb(0, 0, 126);
+    padding: 3px;
 }
 
 header > h1 {
@@ -20,9 +22,34 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+#icon-menu {
     display: block;
-    background-image: linear-gradient(to right, rgb(1, 119, 230), rgb(0, 0, 231));
+    padding: 8px;
+    padding-top: 5px;
+    color:rgb(0, 0, 231);
+    background-image: none;
+    background-color: rgb(247, 247, 247); 
+    border-radius: 10px;
+    box-shadow: inset 1px 1px 8px rgba(0, 0, 0, 0.568);
+    color: rgb(3, 133, 255);
+    width: 20vw;
+    
+}
+
+#icon-menu:hover {
+    color: white;
+    border-radius: 10px 10px 0px 0px;
+    background-image: linear-gradient(to right, rgb(1, 150, 230), rgb(0, 55, 231));
+    box-shadow: none;
+    transition: .3s;
+}
+
+menu {
+    display: none;
+    background-image: linear-gradient(to right, rgb(1, 150, 230), rgb(0, 55, 231));
+    width: 35vw;
+    border-radius: 0px 0px 8px 8px;
+    padding: 8px;
 }
 
 menu > ul {
@@ -30,18 +57,24 @@ menu > ul {
 }
 
 menu a {
-    display: block;
+    display: inline-block;
+    width: 210px;
+    
     padding: 10px;
     text-decoration: none;
     color: white;
-    text-align: center;
     border: 1px solid rgb(0, 0, 231);
-    
+    border-left: 2px solid rgb(0, 62, 231);
+    border-radius: 8px;
+    font-weight: bold;
 }
 
 menu a:hover {
-    background-image: linear-gradient(to left, rgb(0, 82, 189), rgb(0, 23, 231));
+    background-image: linear-gradient(to left, rgb(156, 220, 250), rgb(73, 164, 248));
+    color: rgb(0, 42, 231);
+    transition: .5s;
 }
+
 
 main {
     width: 85vw;
