--- a/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/sytles/style.css
+++ b/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/sytles/style.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 header {
-    background-image: linear-gradient(to right, rgb(3, 133, 255), blue);
+    background-image: linear-gradient(to bottom, rgb(3, 133, 255), blue);
     color: white;
     box-shadow: 1px 1px 5px rgb(0, 0, 126);
     padding: 3px;
@@ -32,23 +32,15 @@ header > h1 {
     border-radius: 10px;
     box-shadow: inset 1px 1px 8px rgba(0, 0, 0, 0.568);
     color: rgb(3, 133, 255);
-    width: 20vw;
+    width: 100px;
     
-}
-
-#icon-menu:hover {
-    color: white;
-    border-radius: 10px 10px 0px 0px;
-    background-image: linear-gradient(to right, rgb(1, 150, 230), rgb(0, 55, 231));
-    box-shadow: none;
-    transition: .3s;
 }
 
 menu {
     display: none;
     background-image: linear-gradient(to right, rgb(1, 150, 230), rgb(0, 55, 231));
-    width: 35vw;
-    border-radius: 0px 0px 8px 8px;
+    width: 236px;
+    border-radius: 8px;
     padding: 8px;
 }
 
