--- a/HTML5-CSS3/Modulo04/projects/social/style/style.css
+++ b/HTML5-CSS3/Modulo04/projects/social/style/style.css
@@ -19,6 +19,7 @@ body {
     background-position: top center;
     background-size: cover;
     background-attachment: fixed;
+    
 }
 
 main {
@@ -36,4 +37,13 @@ main {
     background-image: url(../assets/images/frame-iphone.png);
     background-repeat: no-repeat;
     background-size: contain;
+}
+
+#smartphone #screen {
+    position: relative;
+    top: 64px;
+    left: 18px;
+    height: 375px;
+    width: 214px;
+    ;
 }
