--- a/HTML5-CSS3/Modulo04/projects/social/styles/style.css
+++ b/HTML5-CSS3/Modulo04/projects/social/styles/style.css
@@ -10,7 +10,6 @@
 html, body {
     height: 100vh;
     width: 100vw;
-    background-color: black;
 }
 
 body {
@@ -19,22 +18,21 @@ body {
     background-position: top center;
     background-size: cover;
     background-attachment: fixed;
-    
 }
 
 main {
     height: 100vh;
-    position: relative;
+    width: 100vw;
+    position: absolute;
 }
 
 #smartphone {
     position: absolute;
     top: 45%;
-    left: 50%;
+    left: 52%;
     transform: translate(-50%, -50%);
-    height: 500px;
-    width: 250px;
-    margin-top: 40px;
+    height: 550px;
+    width: 300px;
     background-image: url(../assets/images/frame-iphone.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -42,14 +40,28 @@ main {
 
 #smartphone #screen {
     position: relative;
-    top: 64px;
-    left: 17px;
-    height: 376px;
-    width: 214px;
+    top: 70px;
+    left: 20px;
+    height: 413px;
+    width: 234px;
 }
 
+#social-network-menu {
+    position: absolute;
+    bottom: 5px;
+    display: flex;
+    left: 50%;
+    transform: translateX(-50%);
+} 
+
 #social-network-menu img {
-    height: 50px;
-    margin: 10px;
+    height: 48px;
+    margin: 5px;
     border-radius: 50%;
+}
+
+#social-network-menu img:hover {
+    border: 2px solid white;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.185);
+    transform: translate(-3px, -3px);
 }
