--- a/HTML5-CSS3/Modulo04/projects/social/styles/style.css
+++ b/HTML5-CSS3/Modulo04/projects/social/styles/style.css
@@ -23,16 +23,16 @@ body {
 main {
     height: 100vh;
     width: 100vw;
-    position: absolute;
+    position: relative;
 }
 
 #smartphone {
     position: absolute;
-    top: 50%;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 450px;
-    width: 275px;
+    width: 223px;
     background-image: url(../assets/images/frame-iphone.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -55,7 +55,7 @@ main {
 } 
 
 #social-network-menu img {
-    height: 45px;
+    height: 40px;
     margin: 5px;
     border-radius: 50%;
 }
