--- a/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/styles/style.css
+++ b/HTML5-CSS3/Modulo04/exercises/media-queries/mq004/styles/style.css
@@ -4,6 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 html, body {
@@ -18,8 +19,9 @@ header {
 }
 
 header > h1 {
-    padding: 25px;
+    padding: 20px;
     text-align: center;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.671);
 }
 
 #icon-menu {
@@ -60,7 +62,6 @@ menu > ul {
 menu a {
     display: inline-block;
     width: 210px;
-    
     padding: 10px;
     text-decoration: none;
     color: white;
