--- a/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/style.css
+++ b/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/style.css
@@ -9,9 +9,43 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
+body, html {
     height: 100vh;
-    background-image: linear-gradient(to bottom, var(--lilac-color), var(--green-color));
+    width: 100vw;
+    background-color: var(--lilac-color);
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+#login {
+    align-items: center;
+    background-color: white;
+    overflow: hidden;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.674);
+}
+
+#image {
+    display: block;
+    background: var(--lilac-color) url(../images/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 200px;
+}
+
+#forms {
+    display: block;
+    padding: 10px;
+    
 }
