--- a/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/style.css
+++ b/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/style.css
@@ -34,6 +34,8 @@ main {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.674);
+    transition: width .5s, heigth .5s;
+    transition-timing-function: ease;
 }
 
 #image {
@@ -47,5 +49,4 @@ main {
 #forms {
     display: block;
     padding: 10px;
-    
 }
