--- a/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/media-query.css
+++ b/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/media-query.css
@@ -30,14 +30,23 @@
     }
 
     #image {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     #forms {
-        float: right;
+        float: left;
         width: 50%;
 
+    }
+
+    #forms > h1 {
+        
+        font-size: 2em;
+    }
+    
+    #forms > p {
+        font-size: 1.2em;
     }
 }
