Finish responsive login

--- a/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/media-query.css
+++ b/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/media-query.css
@@ -6,7 +6,10 @@
     }
 
     #login {
+        display: flex;
+        align-items: center;
         width: 80vw;
+        height: 350px;
     }
 
     #image {
@@ -26,7 +29,10 @@
     }
 
     #login {
+        display: flex;
+        align-items: center;
         width: 990px;
+        height: 500px;
     }
 
     #image {
