--- a/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/style.css
+++ b/HTML5-CSS3/Modulo04/projects/reponsive-login/styles/style.css
@@ -27,7 +27,6 @@ main {
 }
 
 #login {
-    align-items: center;
     background-color: white;
     overflow: hidden;
     width: 250px;
@@ -61,6 +60,10 @@ main {
     text-align: center;
 }
 
+form {
+    margin-top: 20px;
+}
+
 .field {
     display: flex;
     align-items: center;
@@ -72,13 +75,23 @@ main {
 
 .field span{
     padding: 3px;
+    color: white;
     
 }
 
 .field input {
-    height: 40px;
+    height: 100%;
     width: 100%;
+    padding: 4px;
     outline: none;
+    background-color: #64dbd7;
+    border: 2px solid var(--lilac-color);
+    border-radius: 5px ;
+}
+
+.field input:focus-within {
+    background-color: white;
+    border: 1px solid var(--lilac-color);
 }
 
 input[type=submit] {
